--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Loan Interest Rate Calculator</title>
 	<!--Referencing the external stylesheet file 'style.css'-->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 	<div class="container">
@@ -37,6 +37,6 @@
 		</div>
 	</div>
 	<!--Referencing the javascript file 'script.js'-->
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="Script.js"></script>
 </body>
 </html>
